--- a/index.html
+++ b/index.html
@@ -48,33 +48,33 @@
       </section>
       <section>
         <h2>Чем мы занимаемся</h2>
-        <img src="/images/box 1 (1).jpg" alt="написание кода" width="370" />
+        <img src="./images/box 1 (1).jpg" alt="написание кода" width="370" />
         <img
-          src="/images/box 2 (1).jpg"
+          src="./images/box 2 (1).jpg"
           alt="мобильные устройства"
           width="370"
         />
-        <img src="/images/box 3 (1).jpg" alt="дизайн" width="370" />
+        <img src="./images/box 3 (1).jpg" alt="дизайн" width="370" />
       </section>
       <section>
         <h2>Наша команда</h2>
         <img
           width="270"
-          src="/images/team card 1 (1).jpg"
+          src="./images/team card 1 (1).jpg"
           alt="Игорь Демьяненко Product Designer"
         />
         <img
-          src="/images/team card 2 (1).jpg"
+          src="./images/team card 2 (1).jpg"
           alt="Ольга Репина Frontend Developer"
           width="270"
         />
         <img
-          src="/images/team card 3 (1).jpg"
+          src="./images/team card 3 (1).jpg"
           alt="Николай Тарасов Marketing"
           width="270"
         />
         <img
-          src="/images/team card 4 (1).jpg"
+          src="./images/team card 4 (1).jpg"
           alt="Михаил Ермаков UI Designer"
           width="270"
         />
